--- a/TestApplicationForCentralBank/Views/Home/AddEmployeePosition.cshtml
+++ b/TestApplicationForCentralBank/Views/Home/AddEmployeePosition.cshtml
@@ -1,7 +1,7 @@
 ﻿@using (Html.BeginForm("AddNewPosition", "Home", FormMethod.Post))
 {
     <p>Введите должность</p>
-    <input type="text" name="position" required placeholder="ФИО" />
+    <input type="text" name="position" required placeholder="Должность" />
 
     <br />
     <button type="submit"> Добавить </button>
