--- a/TestApplicationForCentralBank/Views/Home/EmployeeList.cshtml
+++ b/TestApplicationForCentralBank/Views/Home/EmployeeList.cshtml
@@ -1,5 +1,5 @@
 ﻿@model List<EmployeeModel>
 @foreach (var employee in Model)
 {
-    <p>@employee.EmployeeId  @employee.Fio</p>
+    <p>@employee.Fio</p>
 }
