--- a/TestApplicationForCentralBank/Views/Home/EmployeePositionList.cshtml
+++ b/TestApplicationForCentralBank/Views/Home/EmployeePositionList.cshtml
@@ -1,5 +1,5 @@
 ﻿@model List<EmployeePositionModel>
 @foreach (var position in Model)
 {
-    <p>@position.Id  @position.Position</p>
+    <p>@position.Position</p>
 }
